--- a/public/manifest.json
+++ b/public/manifest.json
@@ -8,18 +8,18 @@
       "type": "image/x-icon"
     },
     {
-      "src": "logo192.png",
+      "src": "img/logo192.png",
       "type": "image/png",
-      "sizes": "192x192"
+      "sizes": "192x61"
     },
     {
-      "src": "logo512.png",
+      "src": "img/logo512.png",
       "type": "image/png",
-      "sizes": "512x512"
+      "sizes": "512x162"
     }
   ],
   "start_url": ".",
   "display": "standalone",
-  "theme_color": "#000000",
+  "theme_color": "#60a5fa",
   "background_color": "#ffffff"
 }
